# nu_plugin_globset

./: Cargo.toml
.github/workflows/: build.yaml
src/: main.rs  test.rs
